--- a/angular-bookstore/src/app/components/book-list/book-list.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-list.component.html
@@ -1,12 +1,12 @@
 <div class="container" style="text-align: center;">
-    <table border="1" style="border:1px solid black;margin-left:auto;margin-right:auto;">
+    <table border="1" class="table" style="border:1px solid black;margin-left:auto;margin-right:auto;">
         <thead>
             <tr>
                 <th>Images</th>
                 <th>Name</th>
                 <th>Description</th>
                 <th>Price</th>
-            </tr>
+            </tr> 
         </thead>
         <tbody>
             <tr *ngFor="let book of books">
