--- a/angular-bookstore/src/styles.css
+++ b/angular-bookstore/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
 @font-face{
     font-family: 'Roboto Mono';
     src: url(/src/assets/fonts/static/RobotoMono-Regular.ttf) format("truetype");
@@ -7,3 +10,7 @@
 h1{
     font-family: 'Roboto Mono';
 }
+
+body {
+    padding-top: 56px;
+  }
