Completed feature five search book by keyword.

--- a/angular-bookstore/src/app/app.component.html
+++ b/angular-bookstore/src/app/app.component.html
@@ -7,16 +7,9 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-8">
-                        <input type="text" class="form-control" placeholder="Search books">
-                    </div>
-                    <div class="col-md-2">
-                        <button type="submit" class="btn btn-primary">Search</button>
-                    </div>
-                </div>
-            </div>
+            <!-- This selector is for search components keyword. -->
+            <app-search></app-search>
+            <!-- End of the search component keyword. -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home
