--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -10,14 +10,14 @@
   <div class="col-lg-9">
     <!-- /.row -->
     <div class="row">
-      <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books">
+      <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of pageOfItems">
         <div class="card h-100">
           <a routerLink="/books/{{book.id}}"><img class="card-img-top img-responsive" [src]="book.imageUrl" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a routerLink="/books/{{book.id}}">{{book.name}}</a>
             </h4>
-            <h5>{{book.unitPrice | currency}}</h5>
+            <h5>{{book.unitPrice}}</h5>
             <p class="card-text text-truncate">{{book.description}}</p>
           </div>
           <div class="card-footer">
@@ -29,6 +29,33 @@
         No Books Found.
       </div>
     </div>
+
+    <div class="row">
+      <!-- Handle page size -->
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-4">
+            <span class="mr-2">Page Size:</span>
+          </div>
+          <div class="col-md-8">
+            <select (change)="updatePageSize($event.target.value)"
+            class="form-control-sm" style="width: 20%;">
+            <option selected>5</option>
+            <option>10</option>
+            <option>20</option>
+            <option>50</option>
+          </select>
+          </div>
+        </div>
+      </div>
+      <!-- Handle the pagination -->
+      <div class="col-md-6">
+        <!-- Pagination Selector goes here -->
+        <jw-pagination [items]="books" (changePage)="pageClick($event)" [pageSize]="pageSize" style="cursor: pointer;">
+        </jw-pagination>
+      </div>
+    </div>
+
   </div>
   <!-- /.col-lg-9 -->
 
