--- a/angular-bookstore/src/styles.css
+++ b/angular-bookstore/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
-@import "~@fortawesome/fontawesome-free/css/all.min.css";
+/* @import "~@fortawesome/fontawesome-free/css/all.min.css"; */
 
 @font-face{
     font-family: 'Roboto Mono';
@@ -13,4 +13,8 @@ h1{
 
 body {
     padding-top: 56px;
+  }
+
+  .pagination{
+      float: right;
   }
