--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -10,7 +10,7 @@
   <div class="col-lg-9">
     <!-- /.row -->
     <div class="row">
-      <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of pageOfItems">
+      <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books">
         <div class="card h-100">
           <a routerLink="/books/{{book.id}}"><img class="card-img-top img-responsive" [src]="book.imageUrl" alt=""></a>
           <div class="card-body">
@@ -38,21 +38,27 @@
             <span class="mr-2">Page Size:</span>
           </div>
           <div class="col-md-8">
-            <select (change)="updatePageSize($event.target.value)"
-            class="form-control-sm" style="width: 20%;">
-            <option selected>5</option>
-            <option>10</option>
-            <option>20</option>
-            <option>50</option>
-          </select>
+            <select (change)="updatePageSize($event.target.value)" class="form-control-sm" style="width: 25%;">
+              <option selected>5</option>
+              <option>10</option>
+              <option>20</option>
+              <option>50</option>
+            </select>
           </div>
         </div>
       </div>
       <!-- Handle the pagination -->
       <div class="col-md-6">
         <!-- Pagination Selector goes here -->
-        <jw-pagination [items]="books" (changePage)="pageClick($event)" [pageSize]="pageSize" style="cursor: pointer;">
-        </jw-pagination>
+        <ngb-pagination [(page)]="currentPage" [pageSize]="pageSize" [collectionSize]="totalRecords"
+          (pageChange)="listBooks()" class="d-flex justify-content-end">
+          <ng-template ngbPaginationPrevious>Prev</ng-template>
+          <ng-template ngbPaginationNext>Next</ng-template>
+          <ng-template ngbPaginationFirst>First</ng-template>
+          <ng-template ngbPaginationLast>Last</ng-template>
+        </ngb-pagination>
+        <!-- <jw-pagination [items]="books" (changePage)="pageClick($event)" [pageSize]="pageSize" style="cursor: pointer;">
+        </jw-pagination> -->
       </div>
     </div>
 
