--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -7,6 +7,9 @@
   </div>
   <!-- /.col-lg-3 -->
 
+  <ngx-spinner type="ball-spin-clockwise" size="default" bdColor="rgba(51,51,51,0.8)">
+    <p style="font-size: 20px; color: white">Please wait...</p>
+  </ngx-spinner>
   <div class="col-lg-9">
     <!-- /.row -->
     <div class="row">
@@ -25,40 +28,42 @@
           </div>
         </div>
       </div>
-      <div *ngIf="books?.length == 0" class="col-md-12 alert alert-warning mt-3">
+      <div *ngIf="books?.length == 0 && !books" class="col-md-12 alert alert-warning mt-3">
         No Books Found.
       </div>
     </div>
 
-    <div class="row">
-      <!-- Handle page size -->
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <span class="mr-2">Page Size:</span>
-          </div>
-          <div class="col-md-8">
-            <select (change)="updatePageSize($event.target.value)" class="form-control-sm" style="width: 25%;">
-              <option selected>5</option>
-              <option>10</option>
-              <option>20</option>
-              <option>50</option>
-            </select>
+    <div *ngIf="books?.length > 0">
+      <div class="row">
+        <!-- Handle page size -->
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-4">
+              <span class="mr-2">Page Size:</span>
+            </div>
+            <div class="col-md-8">
+              <select (change)="updatePageSize($event.target.value)" class="form-control-sm" style="width: 25%;">
+                <option selected>5</option>
+                <option>10</option>
+                <option>20</option>
+                <option>50</option>
+              </select>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- Handle the pagination -->
-      <div class="col-md-6">
-        <!-- Pagination Selector goes here -->
-        <ngb-pagination [(page)]="currentPage" [pageSize]="pageSize" [collectionSize]="totalRecords"
-          (pageChange)="listBooks()" class="d-flex justify-content-end">
-          <ng-template ngbPaginationPrevious>Prev</ng-template>
-          <ng-template ngbPaginationNext>Next</ng-template>
-          <ng-template ngbPaginationFirst>First</ng-template>
-          <ng-template ngbPaginationLast>Last</ng-template>
-        </ngb-pagination>
-        <!-- <jw-pagination [items]="books" (changePage)="pageClick($event)" [pageSize]="pageSize" style="cursor: pointer;">
-        </jw-pagination> -->
+        <!-- Handle the pagination -->
+        <div class="col-md-6">
+          <!-- Pagination Selector goes here -->
+          <ngb-pagination [(page)]="currentPage" [pageSize]="pageSize" [collectionSize]="totalRecords"
+            (pageChange)="listBooks()" class="d-flex justify-content-end">
+            <ng-template ngbPaginationPrevious>Prev</ng-template>
+            <ng-template ngbPaginationNext>Next</ng-template>
+            <ng-template ngbPaginationFirst>First</ng-template>
+            <ng-template ngbPaginationLast>Last</ng-template>
+          </ngb-pagination>
+          <!-- <jw-pagination [items]="books" (changePage)="pageClick($event)" [pageSize]="pageSize" style="cursor: pointer;">
+          </jw-pagination> -->
+        </div>
       </div>
     </div>
 
